@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addons>
 <addon id="plugin.video.filmibynature" name="Filmi BY NATURE"
-	version="2.1.2" provider-name="AJ">
+	version="2.1.3" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtle" version="1.3.5" />
+		<import addon="script.module.turtle" version="1.3.6" />
 		<import addon="script.module.metahandler" version="1.0.1"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
@@ -133,7 +133,7 @@
 	</extension>
 </addon>
 
-<addon id="script.module.turtle" name="Turtle" version="1.3.5"
+<addon id="script.module.turtle" name="Turtle" version="1.3.6"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
@@ -141,6 +141,7 @@
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
 		<import addon="script.module.urlresolver" version="0.0.1" />
 		<import addon="script.common.plugin.cache" version="0.9.1"/>
+		<import addon="script.module.simple.downloader" version="1.9.4"/>
 	</requires>
 	<extension point="xbmc.python.module" library="lib" />
 	<extension point="xbmc.addon.metadata">
