@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.filmibynature" name="Filmi BY NATURE"
-	version="2.1.2" provider-name="AJ">
+	version="2.1.3" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtle" version="1.3.5" />
+		<import addon="script.module.turtle" version="1.3.6" />
 		<import addon="script.module.metahandler" version="1.0.1"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
