@@ -54,7 +54,11 @@
 	<xs:complexType name="next-action-type">
 		<xs:attribute name="name" type="xs:string" use="required"></xs:attribute>
 		<xs:attribute name="id" type="xs:string" use="required"></xs:attribute>
-		<xs:attribute name="isfolder" type="xs:boolean" use="required"></xs:attribute>
+		<xs:attribute name="isfolder" type="xs:boolean"
+			use="required">
+		</xs:attribute>
+		<xs:attribute name="downloadable" type="xs:boolean"></xs:attribute>
+		<xs:attribute name="download-action-id" type="xs:string"></xs:attribute>
 	</xs:complexType>
 
 
